--- a/jamsesh-react/jamsesh-app/public/index.html
+++ b/jamsesh-react/jamsesh-app/public/index.html
@@ -31,73 +31,8 @@
     </noscript>
     <div id="root"></div>
     <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyDYc_Phs9I-6OQYRdcvmPPi9AJXNOYiE1I",
-    authDomain: "jamsesh-68d39.firebaseapp.com",
-    databaseURL: "https://jamsesh-68d39.firebaseio.com",
-    projectId: "jamsesh-68d39",
-    storageBucket: "jamsesh-68d39.appspot.com",
-    messagingSenderId: "500614187735"
-  };
-  firebase.initializeApp(config);
-</script>
-
-<script type="text/javascript">
-  function handleClientLoad() {
-    // Loads the client library and the auth2 library together for efficiency.
-    // Loading the auth2 library is optional here since `gapi.client.init` function will load
-    // it if not already loaded. Loading it upfront can save one network request.
-    gapi.load('client:auth2', initClient);
-  }
-
-  function initClient() {
-    // Initialize the client with API key and People API, and initialize OAuth with an
-    // OAuth 2.0 client ID and scopes (space delimited string) to request access.
-    gapi.client.init({
-        apiKey: 'AIzaSyDYc_Phs9I-6OQYRdcvmPPi9AJXNOYiE1I',
-        discoveryDocs: ["https://people.googleapis.com/$discovery/rest?version=v1"],
-        clientId: '500614187735-ijct501n3sdqnrjkh2q0prknkkoak0ov.apps.googleusercontent.com',
-        scope: 'profile'
-    }).then(function () {
-      // Listen for sign-in state changes.
-      gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
-
-      // Handle the initial sign-in state.
-      updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
-    });
-  }
-
-  function updateSigninStatus(isSignedIn) {
-    // When signin status changes, this function is called.
-    // If the signin status is changed to signedIn, we make an API call.
-    if (isSignedIn) {
-      makeApiCall();
-    }
-  }
-
-  function handleSignInClick(event) {
-    // Ideally the button should only show up after gapi.client.init finishes, so that this
-    // handler won't be called before OAuth is initialized.
-    gapi.auth2.getAuthInstance().signIn();
-  }
-
-  function handleSignOutClick(event) {
-    gapi.auth2.getAuthInstance().signOut();
-  }
-
-  function makeApiCall() {
-    // Make an API call to the People API, and print the user's given name.
-    gapi.client.people.people.get({
-      'resourceName': 'people/me',
-      'requestMask.includeField': 'person.names'
-    }).then(function(response) {
-      console.log('Hello, ' + response.result.names[0].givenName);
-    }, function(reason) {
-      console.log('Error: ' + reason.result.error.message);
-    });
-  }
-</script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    </body>
 </html>
